Project

General

Profile

Actions

Bug #5820

closed

radosgw-admin should fail on non-valid flags

Added by Anonymous almost 11 years ago. Updated over 10 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

A bug in the RGW teuthology task was encountered today where the --secret flag for user creation was being passed in as --secret-key, which is not a valid flag. radosgw-admin was then auto-generating the secret, which lead to later commands failing because they were using the specified (but unused) secret.

It would be helpful if radosgw-admin would throw an error when an invalid flag is used.

Actions #1

Updated by Christophe Courtaut over 10 years ago

What do you mean by "flag"?
are the "--dashed-option" flags?
If so, here comes a pull request to fix this issue : https://github.com/ceph/ceph/pull/495

Actions #2

Updated by Anonymous over 10 years ago

The dashed options are what I meant. I'd prefer Yehuda to review this; I'll try and ping him on it today.

Actions #3

Updated by Ian Colle over 10 years ago

  • Status changed from New to Resolved

Pull request merged.

Actions

Also available in: Atom PDF