rgw: rgw-admin throw an error when invalid flag is passed

fix #5820 http://tracker.ceph.com/issues/5820

Signed-off-by: Christophe Courtaut <christophe.courtaut@gmail.com>